--- a/mod.andrew.out/web-app/src/main/resources/templates/index.html
+++ b/mod.andrew.out/web-app/src/main/resources/templates/index.html
@@ -1,14 +1,141 @@
-
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Home</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <title>Shopping Center</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/changes.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
-<body>
-    <div class="container">
-        <h1 class="mt-5">Welcome to the Shopping Cart</h1>
-        <p class="lead">Please <a th:href="@{/register}">Register</a> or <a th:href="@{/login}">Login</a> to continue.</p>
+<body style="background-color: #E6F9E6;">
+    <!--Company Header Starting  -->
+    <div class="container-fluid text-center"
+        style="margin-top: 45px; background-color: #33cc33; color: white; padding: 5px;">
+        <h2>Ellison Electronics</h2>
+        <h6>We specialize in Electronics</h6>
+        <form class="form-inline" th:action="@{/}" method="get">
+            <div class="input-group">
+                <input type="text" class="form-control" size="50" name="search"
+                    placeholder="Search Items" required>
+                <div class="input-group-btn">
+                    <input type="submit" class="btn btn-danger" value="Search" />
+                </div>
+            </div>
+        </form>
+        <p align="center"
+            style="color: blue; font-weight: bold; margin-top: 5px; margin-bottom: 5px;"
+            id="message"></p>
     </div>
+    <!-- Company Header Ending -->
+
+    <!-- Starting Navigation Bar -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#myNavbar">
+                    <span class="icon-bar"></span> <span class="icon-bar"></span> <span
+                        class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" th:href="@{/}"><span
+                    class="glyphicon glyphicon-home">&nbsp;</span>Shopping Center</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a th:href="@{/login}">Login</a></li>
+                    <li><a th:href="@{/register}">Register</a></li>
+                    <li><a th:href="@{/}">Products</a></li>
+                    <li class="dropdown"><a class="dropdown-toggle"
+                        data-toggle="dropdown" href="#">Category <span class="caret"></span>
+                    </a>
+                        <ul class="dropdown-menu">
+                            <li><a th:href="@{/?type=mobile}">Mobiles</a></li>
+                            <li><a th:href="@{/?type=tv}">TVs</a></li>
+                            <li><a th:href="@{/?type=laptop}">Laptops</a></li>
+                            <li><a th:href="@{/?type=camera}">Camera</a></li>
+                            <li><a th:href="@{/?type=speaker}">Speakers</a></li>
+                            <li><a th:href="@{/?type=tablet}">Tablets</a></li>
+                        </ul></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- End of Navigation Bar -->
+
+    <div class="container" style="margin-top: 70px;">
+        <div class="row">
+            <div class="col-md-4" th:each="product : ${products}">
+                <div class="card mb-4 shadow-sm">
+                    <img th:src="@{'/images/' + ${product.image}}" class="card-img-top" alt="Product Image">
+                    <div class="card-body">
+                        <h5 class="card-title" th:text="${product.name}">Product Name</h5>
+                        <p class="card-text" th:text="${product.description}">Product Description</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <a th:href="@{'/product-details/' + ${product.id}}" class="btn btn-sm btn-outline-secondary">View</a>
+                                <a th:href="@{'/cart/add/' + ${product.id}}" class="btn btn-sm btn-outline-secondary">Add to Cart</a>
+                            </div>
+                            <small class="text-muted" th:text="${'$' + product.price}">$999</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Start the footer Contacts -->
+    <div class="container-fluid"
+        style="background-color: #454545; color: white; margin-top: 20px;">
+        <div class="container">
+            <h3 class="text-center">Contact</h3>
+            <p class="text-center">
+                <em>We love our fans!</em>
+            </p>
+            <div class="row test">
+                <div class="col-md-4">
+                    <p>Fan? Drop a note.</p>
+                    <p>
+                        <span class="glyphicon glyphicon-map-marker"></span>Bitter Code
+                    </p>
+                    <p>
+                        <span class="glyphicon glyphicon-phone"></span>Phone: +91
+                        1515151515
+                    </p>
+                    <p>
+                        <span class="glyphicon glyphicon-envelope"></span>Email:
+                        thebittercode@gmail.com
+                    </p>
+                    <p>
+                        <span class="glyphicon glyphicon-copyright-mark"></span>
+                        BitterCode - 2023
+                    </p>
+                </div>
+                <div class="col-md-8">
+                    <form th:action="@{/fansMessage}" method="post">
+                        <div class="row">
+                            <div class="col-sm-6 form-group">
+                                <input class="form-control" id="name" name="name"
+                                    placeholder="Name" type="text" required>
+                            </div>
+                            <div class="col-sm-6 form-group">
+                                <input class="form-control" id="email" name="email"
+                                    placeholder="Email" type="email" required>
+                            </div>
+                        </div>
+                        <textarea class="form-control" id="comments" name="comments"
+                            placeholder="Comment" rows="5" required></textarea>
+                        <div class="row">
+                            <div class="col-md-12 form-group">
+                                <button class="btn pull-right" type="submit">Send</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End of Contact or about us -->
 </body>
 </html>
