--- a/mod.andrew.out/web-app/src/main/resources/templates/fragments/header.html
+++ b/mod.andrew.out/web-app/src/main/resources/templates/fragments/header.html
@@ -40,7 +40,7 @@
                         <span class="icon-bar"></span> <span class="icon-bar"></span> <span
                             class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" th:href="@{/products}"><span
+                    <a class="navbar-brand" th:href="@{/}"><span
                             class="glyphicon glyphicon-home">&nbsp;</span>Shopping Center</a>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
