--- a/mod.andrew.out/web-app/src/main/resources/templates/index.html
+++ b/mod.andrew.out/web-app/src/main/resources/templates/index.html
@@ -10,49 +10,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body style="background-color: #E6F9E6;">
-    <!--Company Header Starting  -->
-    <div class="container-fluid text-center"
-        style="margin-top: 45px; background-color: #33cc33; color: white; padding: 5px;">
-        <h2>Ellison Electronics</h2>
-        <h6>We specialize in Electronics</h6>
-        <form class="form-inline" th:action="@{/}" method="get">
-            <div class="input-group">
-                <input type="text" class="form-control" size="50" name="search"
-                    placeholder="Search Items" required>
-                <div class="input-group-btn">
-                    <input type="submit" class="btn btn-danger" value="Search" />
-                </div>
-            </div>
-        </form>
-        <p align="center"
-            style="color: blue; font-weight: bold; margin-top: 5px; margin-bottom: 5px;"
-            id="message"></p>
-    </div>
-    <!-- Company Header Ending -->
-
-    <!-- Starting Navigation Bar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse"
-                    data-target="#myNavbar">
-                    <span class="icon-bar"></span> <span class="icon-bar"></span> <span
-                        class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" th:href="@{/}"><span
-                    class="glyphicon glyphicon-home">&nbsp;</span>Shopping Center</a>
-            </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a th:href="@{/login}">Login</a></li>
-                    <li><a th:href="@{/register}">Register</a></li>
-                    <li><a th:href="@{/}">Products</a></li>
-                    
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- End of Navigation Bar -->
+    <div th:replace="~{fragments/header :: header}"></div>
 
     <div class="container" style="margin-top: 70px;">
         <div class="row">
@@ -78,57 +36,6 @@
         </div>
     </div>
 
-    <!-- Start the footer Contacts -->
-    <div class="container-fluid"
-        style="background-color: #454545; color: white; margin-top: 20px;">
-        <div class="container">
-            <h3 class="text-center">Contact</h3>
-            <p class="text-center">
-                <em>We love our fans!</em>
-            </p>
-            <div class="row test">
-                <div class="col-md-4">
-                    <p>Fan? Drop a note.</p>
-                    <p>
-                        <span class="glyphicon glyphicon-map-marker"></span>Bitter Code
-                    </p>
-                    <p>
-                        <span class="glyphicon glyphicon-phone"></span>Phone: +91
-                        1515151515
-                    </p>
-                    <p>
-                        <span class="glyphicon glyphicon-envelope"></span>Email:
-                        thebittercode@gmail.com
-                    </p>
-                    <p>
-                        <span class="glyphicon glyphicon-copyright-mark"></span>
-                        BitterCode - 2023
-                    </p>
-                </div>
-                <div class="col-md-8">
-                    <form th:action="@{/fansMessage}" method="post">
-                        <div class="row">
-                            <div class="col-sm-6 form-group">
-                                <input class="form-control" id="name" name="name"
-                                    placeholder="Name" type="text" required>
-                            </div>
-                            <div class="col-sm-6 form-group">
-                                <input class="form-control" id="email" name="email"
-                                    placeholder="Email" type="email" required>
-                            </div>
-                        </div>
-                        <textarea class="form-control" id="comments" name="comments"
-                            placeholder="Comment" rows="5" required></textarea>
-                        <div class="row">
-                            <div class="col-md-12 form-group">
-                                <button class="btn pull-right" type="submit">Send</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- End of Contact or about us -->
+    <div th:replace="~{fragments/footer :: footer}"></div>
 </body>
 </html>
