--- a/mod.andrew.out/web-app/src/main/resources/templates/cart.html
+++ b/mod.andrew.out/web-app/src/main/resources/templates/cart.html
@@ -2,10 +2,17 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Shopping Cart</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/changes.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <div class="container">
+    <div th:replace="~{fragments/header :: header}"></div>
+
+    <div class="container" style="margin-top: 70px;">
         <h1 class="mt-5">Shopping Cart</h1>
         <div th:if="${#lists.isEmpty(cartItems)}">
             <h3 class="text-center">Your cart is empty!</h3>
@@ -39,5 +46,7 @@
             </div>
         </div>
     </div>
+
+    <div th:replace="~{fragments/footer :: footer}"></div>
 </body>
 </html>
