--- a/mod.andrew.out/web-app/src/main/resources/templates/index.html
+++ b/mod.andrew.out/web-app/src/main/resources/templates/index.html
@@ -18,9 +18,9 @@
                 <div class="card mb-4 shadow-sm product-card-custom" style="height: 350px;">
                     <img th:src="${product.image}" class="card-img-top" alt="Product Image" style="height: 150px; max-width: 180px; width: auto; margin: 0 auto; display: block;">
                     <div class="card-body">
-                        <h5 class="card-title" th:text="${product.name}" style="font-size: small;">Product Name</h5>
-                        <p class="card-text" th:text="${product.info}" style="font-size: small;">Product Description</p>
-                        <div class="d-flex justify-content-between align-items-center">
+                        <h5 class="card-title text-center" th:text="${product.name}" style="font-size: small;">Product Name</h5>
+                        <p class="card-text text-center" th:text="${product.info}" style="font-size: small;">Product Description</p>
+                        <div class="product-actions">
                             <div class="btn-group">
                                 <a th:href="@{'/product-details/' + ${product.pid}}" class="btn btn-sm btn-outline-secondary">View</a>
                                 <form th:action="@{'/cart/add/' + ${product.pid}}" method="post">
