--- a/mod.andrew.out/web-app/src/main/resources/templates/index.html
+++ b/mod.andrew.out/web-app/src/main/resources/templates/index.html
@@ -22,13 +22,23 @@
                         <p class="card-text text-center" th:text="${product.info}" style="font-size: small;">Product Description</p>
                         <div class="product-actions">
                             <div class="btn-group">
-                                <a th:href="@{'/product-details/' + ${product.pid}}" class="btn btn-sm btn-outline-secondary">View</a>
+                                <a th:href="@{'/product-details/' + ${product.pid}}" class="btn btn-sm btn-info">View</a>
                                 <form th:action="@{'/cart/add/' + ${product.pid}}" method="post">
                                 <input type="hidden" name="quantity" value="1" />
-                                <button type="submit" class="btn btn-sm btn-outline-secondary">Add to Cart</button>
+                                <button type="submit" class="btn btn-sm btn-info">Add to Cart</button>
                             </form>
                             </div>
-                            <small class="text-muted" th:text="${'$' + product.price}">$999</small>
+                            <small class="text-muted product-price" th:text="${'
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div th:replace="~{fragments/footer :: footer}"></div>
+</body>
+</html> + product.price}">$999</small>
                         </div>
                     </div>
                 </div>
