fixed styling - oh those good old days with css

--- a/shopping-cart/WebContent/css/changes.css
+++ b/shopping-cart/WebContent/css/changes.css
@@ -9,15 +9,17 @@
 .product-card-custom .card-body {
     display: flex;
     flex-direction: column;
-    /* justify-content: space-between; */ /* Distribute space vertically within card body */
+    justify-content: space-between; /* Distribute space vertically within card body */
     height: 100%; /* Ensure card body takes full height */
     /* align-items: center; /* Vertically align items */
     text-align: center; 
+    padding: 5%;
 }
 
-/* .product-card-custom .card-text {
+.product-card-custom .card-text {
     text-align: center;
-} */
+    font-size: 12px;
+}
 
 .product-card-custom .product-actions {
     display: flex;
